// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostMentions - Snapshots > matches snapshot for invalid mention (null) 1`] = `null`;

exports[`PostMentions - Snapshots > matches snapshot for mention with username 1`] = `
<a
  class="text-base"
  data-testid="link"
  href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
>
  @TestUser
</a>
`;

exports[`PostMentions - Snapshots > matches snapshot for mention without username (truncated key) 1`] = `
<a
  class="text-base uppercase"
  data-testid="link"
  href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
>
  o1gg...j7dy
</a>
`;

exports[`PostMentions - Snapshots > matches snapshot with additional props 1`] = `
<a
  aria-label="User mention"
  class="text-base"
  data-testid="link"
  data-type="mention"
  href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
>
  @TestUser
</a>
`;

exports[`PostMentions - Snapshots > matches snapshot with custom className 1`] = `
<a
  class="custom-styling text-base"
  data-testid="link"
  href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
>
  @StyledUser
</a>
`;

exports[`PostMentions - Snapshots > matches snapshot with long username 1`] = `
<a
  class="text-base"
  data-testid="link"
  href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
>
  @VeryLongUsernameForTesting
</a>
`;

exports[`PostMentions - Snapshots > matches snapshot with pubky prefix 1`] = `
<a
  class="text-base"
  data-testid="link"
  href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
>
  @PubkyUser
</a>
`;

exports[`PostMentions - Snapshots > matches snapshot with special characters in username 1`] = `
<a
  class="text-base"
  data-testid="link"
  href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
>
  @User_123
</a>
`;
